# MagicEye

./: .clang-format  .gitignore  CMakeLists.txt  OpenCV_Debug.props
.devcontainer/: Dockerfile  devcontainer.json
MagicEye/: CardDatabase.cpp  CardDatabase.h  CardDetails.h  CardFinder.cpp  CardFinder.h  DeltaEGrid.cpp  DeltaEGrid.h  HistoGrid.cpp  HistoGrid.h  MagicCard.cpp  MagicCard.h  MagicEyeGUI.cpp  MagicEyeGUI.h  TableCard.cpp  TableCard.h  main.cpp  pch.h
MagicEye/include/: DeltaEGrid.h  TableCard.h
MagicEye/src/: DeltaEGrid.cpp  HistoGrid.cpp
include/: CardDatabase.h  CardDetails.h  CardFinder.h  DeltaEGrid.h  HistoGrid.h  MagicCard.h  MagicEyeGUI.h  TableCard.h
src/: CardDatabase.cpp  CardFinder.cpp  DeltaEGrid.cpp  HistoGrid.cpp  MagicCard.cpp  MagicEyeGUI.cpp  TableCard.cpp  jsoncpp.cpp  main.cpp
